--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,7 +18,7 @@ marketing:
     site_type: Person
     local_business_type: ''
     org_name: ''
-    description: 'The website of Eason Chen, a passionate researcher who love to use programming skills and creativity to solve problems.'
+    description: 'The website of Eason Chen, 1st-year PhD Student at Human-Computer Interaction Institute, Carnegie Mellon University'
     twitter: 'Eason_C13'
   analytics:
     google_analytics: 'G-B8L1510BCX'
