--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -24,7 +24,7 @@ marketing:
     google_analytics: 'G-B8L1510BCX'
     baidu_tongji: ''
     google_tag_manager: ''
-    microsoft_clarity: ''
+    microsoft_clarity: 'k88jf5knyo'
   verification:
     google: ''
     baidu: ''
